--- a/public/css/main.css
+++ b/public/css/main.css
@@ -366,6 +366,12 @@
   background: #c62024;
 }
 
+.item {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+
 .item__title {
   font-size: 16px;
   font-weight: 700;
@@ -450,6 +456,7 @@
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s;
+  width: 26px;
 }
 
 .item_advantage__negative {
@@ -459,6 +466,7 @@
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s;
+  width: 26px;
 }
 
 .item_advantage--inverse {
@@ -581,6 +589,11 @@
   color: #ffffff;
   padding: 4px 8px;
   margin: 2px;
+}
+
+.item_price__label_action {
+  background-color: #c1ea1d;
+  color: #242424;
 }
 
 .item_price-promo {
@@ -1327,22 +1340,12 @@
   }
 }
 
-.content-compare {
-  padding: 80px 0;
-}
-
 .content-compare__image {
   width: 100%;
   height: 514px;
   background: no-repeat top center / cover;
   padding: 10px;
   border: 1px solid #3e3e3e;
-}
-
-@media all and (max-width: 1280px) {
-  .content-compare {
-    padding: 60px 0;
-  }
 }
 
 @media all and (max-width: 1024px) {
@@ -1352,9 +1355,6 @@
 }
 
 @media all and (max-width: 576px) {
-  .content-compare {
-    padding: 40px 0;
-  }
   .content-compare__image {
     height: 240px;
   }
@@ -1456,6 +1456,15 @@
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.service__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
 .service__col_first {
   grid-row-start: 1;
   grid-row-end: 3;
@@ -1483,6 +1492,47 @@
 @media all and (max-width: 576px) {
   .service {
     grid-template-columns: 1fr;
+  }
+}
+
+@media all and (max-width: 1280px) {
+  .service_category {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+.service_inside {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+@media all and (max-width: 576px) {
+  .service_inside {
+    grid-template-columns: 1fr;
+  }
+}
+
+.advantage {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.advantage__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+}
+
+.advantage_disadvantages {
+  grid-template-columns: 1fr;
+}
+
+@media all and (max-width: 768px) {
+  .advantage_disadvantages {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
