--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,10 @@
 @import "../blocks/content/content-intro";
 
 @import "../blocks/service/service";
+@import "../blocks/service/service_category";
+@import "../blocks/service/service_inside";
+
+@import "../blocks/advantage/advantage";
 
 @import "../blocks/portfolio/portfolio";
 
