--- a/src/items/item/_item.scss
+++ b/src/items/item/_item.scss
@@ -1,4 +1,6 @@
 .item{
+    flex-grow: 1;
+    
     &__title{
         // font-family: $font-family-heading;
         font-size: map-get($map: $font-size, $key: md);
