--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -1956,6 +1956,36 @@ a:hover, a:focus {
   color: #ffffff;
 }
 
+.go-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  background: #242424;
+  border: 1px solid #c1ea1d;
+  fill: #c1ea1d;
+  -webkit-transform: translateY(100px);
+  -ms-transform: translateY(100px);
+  transform: translateY(100px);
+  -webkit-transition: .6s;
+  -o-transition: .6s;
+  transition: .6s;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.go-top:hover {
+  background: #1a1a1a;
+}
+
+.go-top--active {
+  -webkit-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  transform: translateY(0px);
+}
+
 table td {
   padding: 8px 15px;
 }
@@ -2147,6 +2177,11 @@ table td {
   .text-sm-right {
     text-align: right;
   }
+  .go-top {
+    height: 34px;
+    width: 34px;
+    padding: 6px;
+  }
 }
 
 @media all and (max-width: 576px) {
@@ -2158,6 +2193,10 @@ table td {
   }
   .text-xs-right {
     text-align: right;
+  }
+  .go-top {
+    bottom: 9px;
+    right: 12px;
   }
 }
 
