--- a/src/blocks/main.pug
+++ b/src/blocks/main.pug
@@ -25,6 +25,9 @@ html(lang="ru")
         include ./header/header.pug
         block content
         include ./footer/footer.pug
+        svg.go-top(width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg")
+            path(d="M5.84314 13.4069L11.5 7.75L17.1569 13.4069L16.4497 14.114L11.5 9.1642L6.55025 14.114L5.84314 13.4069Z")
+
         link(href="./css/jquery.fancybox.min.css", rel="stylesheet")
         script(src="./js/jquery.fancybox.min.js")
         script(src="./js/jquery.inputmask.min.js")
