--- a/src/pages/tilda.pug
+++ b/src/pages/tilda.pug
@@ -69,7 +69,7 @@ block content
                 h4.text-uppercase.mb-3 Кейсы в&nbsp;нашем портфолио
                 .portfolio 
                     +portfolioPrev("#portfolio-promo", "/img/promo-page-3.jpg", "«Волшебный нырок»", "Лендинг для марафона от Логомашины")
-                    +portfolioPrev("#portfolio-guest", "/img/promo-page-2.jpg", "«Свидетель»", "Круглосуточная юридическая помощь на дорогах")
+                    +portfolioPrev("#portfolio-guest", "/img/promo-page-2.jpg", "«Свидетель»", "Круглосуточная помощь на дорогах")
                     +portfolioPrev("#portfolio-promo", "/img/promo-page-1.jpg", "Личный стилист", "Презентация основных услуг и портфолио работ")
             //- Compare
             section.content-compare.pt-5.pb-5.pt-sm-3.pb-sm-3
