--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @import "../items/item/item_link";
 @import "../items/item/item_price";
 @import "../items/item/item_service";
+@import "../items/item/item_steps";
 
 @import "../items/table/table";
 
