--- a/public/css/main.css
+++ b/public/css/main.css
@@ -372,6 +372,19 @@
   flex-grow: 1;
 }
 
+.item__number {
+  border-radius: 8px;
+  background: #c1ea1d;
+  color: #242424;
+  font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 20px;
+  line-height: 44px;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 20px;
+}
+
 .item__title {
   font-size: 16px;
   font-weight: 700;
@@ -386,6 +399,10 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.item__title_link {
+  text-decoration: underline;
 }
 
 .item__subtitle {
@@ -442,11 +459,15 @@
 .item_advantage__title {
   line-height: 1.3;
   font-weight: 700;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 .item_advantage__title--inverse {
   color: #b8b8b8;
+}
+
+.item_advantage__labels {
+  margin-top: 20px;
 }
 
 .item_advantage__positive {
@@ -695,6 +716,19 @@
   .item_service__image {
     height: 90px;
     min-height: 1px;
+  }
+}
+
+.item_steps {
+  display: block;
+  width: 100%;
+  padding: 30px;
+  border: 1px solid #3e3e3e;
+}
+
+@media all and (max-width: 768px) {
+  .item_steps {
+    padding: 15px;
   }
 }
 
