--- a/src/items/item/_item_advantage.scss
+++ b/src/items/item/_item_advantage.scss
@@ -5,11 +5,14 @@
     &__title{
         line-height: 1.3;
         font-weight: $font-weight-bold;
-        margin-top: $spacer/2;
+        margin: $spacer/2 0;
 
         &--inverse{
             color: $grey;
         }
+    }
+    &__labels{
+        margin-top: $spacer/2;
     }
     &__positive{
         fill: $body-bg;
