--- a/src/blocks/advantage/_advantage.scss
+++ b/src/blocks/advantage/_advantage.scss
@@ -20,3 +20,9 @@
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
+// // < 768px
+// @media all and (max-width: map-get($grid-breakpoints, 'sm')){
+//     .advantage{
+//         grid-template-columns: 1fr;
+//     }
+// }
