--- a/src/items/item/_item_price.scss
+++ b/src/items/item/_item_price.scss
@@ -135,5 +135,8 @@
             max-width: 100%;
             margin-bottom: $spacer/2;
         }
+        &__info{
+            margin-bottom: $spacer/2;
+        }
     }
 }
