--- a/src/blocks/service/_service_category.scss
+++ b/src/blocks/service/_service_category.scss
@@ -4,3 +4,10 @@
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
+
+// < 768px
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .service_category{
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+}
