--- a/src/items/item/_item_steps.scss
+++ b/src/items/item/_item_steps.scss
@@ -5,6 +5,18 @@
     padding: $grid-gutter-width;
     // border: 4px solid $white;
     border: 1px solid $border-color;
+
+    &__subtitle{
+        display: inline-block;
+
+        padding: 6px 12px 4px;        
+        border-radius: 8px;
+        background: $green;
+        color: $black;
+
+        font-family: $font-family-heading;
+        line-height: 1;
+    }
 }
 
 @media all and (max-width: map-get($grid-breakpoints, 'sm')){
