--- a/src/items/table/_table.scss
+++ b/src/items/table/_table.scss
@@ -2,6 +2,8 @@
     border: 1px solid $border-color;
     padding: 10px;
 
+    min-width: 460px;
+
     &__head{
         display: flex;
         border-bottom: 1px solid $border-color;
@@ -18,6 +20,8 @@
         }
         &-main{
             flex: 2 0 50%;
+            min-width: 260px;
+
             padding: 10px;
         }
     }
@@ -28,11 +32,14 @@
 
         &-item{
             flex: 1 0 100px;
+
             padding: 10px;
             text-align: center;
         }
         &-main{
             flex: 2 0 50%;
+            min-width: 260px;
+
             padding: 10px;
         }
 
