--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,9 +26,13 @@
 @import "../items/item/item_service";
 @import "../items/item/item_steps";
 
+@import "../items/table/table-responsive";
 @import "../items/table/table";
 
 @import "../items/pagination/pagination";
+
+@import "../items/dialog/dialog";
+@import "../items/dialog/dialog_answer";
 
 @import "../blocks/modal/modal";
 @import "../blocks/modal/modal_form";
@@ -52,6 +56,7 @@
 @import "../blocks/service/service";
 @import "../blocks/service/service_category";
 @import "../blocks/service/service_inside";
+@import "../blocks/service/service_dialog";
 
 @import "../blocks/advantage/advantage";
 
