--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -83,23 +83,24 @@ block content
                     .service__col.service__col_first
                         .item.item_service
                             .item__title.item_service__title fullstack development
-                            .item_service__image.item_service__image_large(style="background-image:url('/demo/fullstack.png')")
+                            img.item_service__image.d-sm-none(src="/img/fullstack.jpg")
+                            img.item_service__image.d-none.d-sm-block(src="/img/fullstack-mobile.jpg")
                     .service__col.item
                         .item.item_service
                             .item__title.item_service__title google ads & yandex direct
-                            .item_service__image(style="background-image:url('/demo/small.png')")
+                            img.item_service__image(src="/img/ads.jpg")
                     .service__col
                         .item.item_service
                             .item__title.item_service__title create content
-                            .item_service__image(style="background-image:url('/demo/small.png')")
+                            img.item_service__image(src="/img/content.jpg")
                     .service__col
                         .item.item_service
                             .item__title.item_service__title graphic design
-                            .item_service__image(style="background-image:url('/demo/small.png')")
+                            img.item_service__image(src="/img/design.jpg")
                     .service__col
                         .item.item_service
                             .item__title.item_service__title support
-                            .item_service__image(style="background-image:url('/demo/small.png')")
+                            img.item_service__image(src="/img/support.jpg")
                 //- Motivation
                 .content-main.mt-5.mt-sm-3
                     h4.content-main__title.content-main__title_secondary Акулы пера? Тигры веб-дизайна? 
