--- a/src/blocks/content/_content-form.scss
+++ b/src/blocks/content/_content-form.scss
@@ -59,7 +59,7 @@
                 grid-column-start: 1;
                 grid-column-end: 2;
             }
-            &_phone{
+            &_contact{
                 grid-column-start: 2;
                 grid-column-end: 3;
             }
