--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,6 +157,54 @@
   width: 100%;
 }
 
+.input--error {
+  border-color: #c62024;
+}
+
+.input--error::-webkit-input-placeholder {
+  color: #c62024;
+}
+
+.input--error::-moz-placeholder {
+  color: #c62024;
+}
+
+.input--error:-ms-input-placeholder {
+  color: #c62024;
+}
+
+.input--error::-ms-input-placeholder {
+  color: #c62024;
+}
+
+.input--error::placeholder {
+  color: #c62024;
+}
+
+.input--success {
+  border-color: #c1ea1d;
+}
+
+.input--success::-webkit-input-placeholder {
+  color: #c1ea1d;
+}
+
+.input--success::-moz-placeholder {
+  color: #c1ea1d;
+}
+
+.input--success:-ms-input-placeholder {
+  color: #c1ea1d;
+}
+
+.input--success::-ms-input-placeholder {
+  color: #c1ea1d;
+}
+
+.input--success::placeholder {
+  color: #c1ea1d;
+}
+
 .checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -309,19 +357,39 @@
   border-color: #c62024;
 }
 
-.form__validation.error,
-.ajax_form .form__validation.error {
-  color: #c62024 !important;
+.input.error::-webkit-input-placeholder, .ajax_form .input.error::-webkit-input-placeholder {
+  color: #c62024;
 }
 
-.jGrowl {
-  font-family: "Noto Sans";
+.input.error::-moz-placeholder, .ajax_form .input.error::-moz-placeholder {
+  color: #c62024;
+}
+
+.input.error:-ms-input-placeholder, .ajax_form .input.error:-ms-input-placeholder {
+  color: #c62024;
+}
+
+.input.error::-ms-input-placeholder, .ajax_form .input.error::-ms-input-placeholder {
+  color: #c62024;
+}
+
+.input.error::placeholder,
+.ajax_form .input.error::placeholder {
+  color: #c62024;
+}
+
+.form__validation.error,
+.ajax_form .form__validation.error,
+.ajax_form .error {
+  color: #e14346 !important;
 }
 
 .jGrowl#jGrowl {
+  position: fixed;
   top: 50%;
   left: 50%;
   right: auto;
+  font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   -webkit-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
@@ -329,37 +397,45 @@
 }
 
 .jGrowl#jGrowl .jGrowl-notification {
+  opacity: 1;
   width: 320px;
   padding: 40px 20px;
-  border: 1px solid #e7e7e7;
+  margin: 0;
+  border: 4px solid #3e3e3e;
   border-radius: 0;
   font-size: 14px;
-  color: #2b2b2b;
+  color: #ffffff;
 }
 
 .jGrowl#jGrowl .jGrowl-notification .jGrowl-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 21px;
+  top: 0px;
+  right: 0px;
+  font-size: 20px;
   line-height: 30px;
   width: 34px;
   text-align: center;
+  color: #ffffff;
+  border: none;
   border-radius: 0;
-  color: #fff;
   outline: 0;
 }
 
 .jGrowl#jGrowl .jGrowl-notification.af-message-success {
-  background-color: #fff !important;
+  background-color: #242424 !important;
+  border-color: #c1ea1d;
+  color: #c1ea1d;
 }
 
 .jGrowl#jGrowl .jGrowl-notification.af-message-success .jGrowl-close {
   background: #c1ea1d;
+  color: #242424;
 }
 
 .jGrowl#jGrowl .jGrowl-notification.af-message-error {
-  background-color: #fff !important;
+  background-color: #242424 !important;
+  border-color: #c62024;
+  color: #e14346;
 }
 
 .jGrowl#jGrowl .jGrowl-notification.af-message-error .jGrowl-close {
@@ -448,6 +524,18 @@
 @media all and (max-width: 768px) {
   .item__title {
     font-size: 1rem;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .item__title_has-icon {
+    grid-template-columns: 34px 1fr;
+  }
+  .item__icon_inside-title {
+    width: 34px;
+  }
+  .item__intro {
+    font-size: 12px;
   }
 }
 
@@ -885,6 +973,49 @@
   padding: 0;
 }
 
+.modal_cookies {
+  display: none;
+  grid-template-columns: 1fr 100px;
+  grid-gap: 10px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 540px;
+  max-width: 100%;
+  background: #1a1a1a;
+  padding: 20px;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 999;
+}
+
+.modal_cookies__content {
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.modal_cookies__link {
+  text-decoration: underline;
+}
+
+.modal_cookies__btn {
+  font-size: 14px;
+  border: 4px solid #c1ea1d;
+  color: #c1ea1d;
+  padding: 4px 12px;
+  cursor: pointer;
+}
+
+.modal_cookies__btn:hover {
+  text-decoration: none;
+  background-color: #1a1a1a;
+}
+
+.modal_cookies--show {
+  display: grid;
+}
+
 .faq__title {
   position: relative;
   background-color: #2b2b2b;
@@ -943,8 +1074,8 @@
 }
 
 .navbar__title {
-  font-size: 1.25rem;
-  font-weight: 500;
+  font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: #c1ea1d;
   margin-bottom: 20px;
 }
 
@@ -987,7 +1118,7 @@
   }
 }
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 768px) {
   .navbar__grid {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -996,6 +1127,9 @@
 @media all and (max-width: 576px) {
   .navbar__grid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .navbar__service {
+    padding: 10px;
   }
 }
 
@@ -1078,6 +1212,9 @@
 }
 
 @media all and (max-width: 768px) {
+  .navbar_header {
+    padding: 30px;
+  }
   .navbar_header__close {
     top: 9px;
     right: 12px;
@@ -1164,15 +1301,12 @@
   }
   .header__logo {
     margin-right: 20px;
-    -webkit-transform: translateY(-2px);
-    -ms-transform: translateY(-2px);
-    transform: translateY(-2px);
   }
   .header__logo-svg {
     width: 120px;
   }
   .header__nav {
-    top: 9px;
+    top: 14px;
     right: 12px;
   }
   .header__link {
@@ -1480,7 +1614,7 @@
     grid-column-start: 1;
     grid-column-end: 2;
   }
-  .content-form__col_phone {
+  .content-form__col_contact {
     grid-column-start: 2;
     grid-column-end: 3;
   }
@@ -1555,6 +1689,12 @@
 @media all and (max-width: 576px) {
   .service {
     grid-template-columns: 1fr;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .service_index-page {
+    grid-gap: 10px;
   }
 }
 
@@ -1653,10 +1793,6 @@
   text-decoration: none;
 }
 
-.portfolio_navbar {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .portfolio_large {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1680,6 +1816,89 @@
 @media all and (max-width: 576px) {
   .portfolio {
     grid-template-columns: 1fr;
+  }
+}
+
+.portfolio_navbar {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.portfolio_navbar__title {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.portfolio_navbar__intro {
+  font-size: 12px;
+}
+
+@media all and (max-width: 1024px) {
+  .portfolio_navbar {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 1024px) {
+  .portfolio_navbar {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 768px) {
+  .portfolio_navbar {
+    grid-gap: 10px;
+  }
+  .portfolio_navbar__title {
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0;
+    padding: 10px;
+  }
+  .portfolio_navbar__intro {
+    display: none;
+  }
+}
+
+.portfolio_feed__title {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.portfolio_feed__intro {
+  font-size: 14px;
+}
+
+@media all and (max-width: 1024px) {
+  .portfolio_feed {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-gap: 10px;
+  }
+  .portfolio_feed__title {
+    font-size: 12px;
+  }
+  .portfolio_feed__intro {
+    font-size: 12px;
+  }
+}
+
+@media all and (max-width: 768px) {
+  .portfolio_feed__title {
+    font-size: 12px;
+    text-transform: none;
+    padding: 10px;
+  }
+  .portfolio_feed__intro {
+    display: none;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .portfolio_feed {
+    grid-gap: 5px;
+  }
+  .portfolio_feed__title {
+    display: none;
   }
 }
 
