--- a/src/items/form/_jGrowl.scss
+++ b/src/items/form/_jGrowl.scss
@@ -1,47 +1,59 @@
-.jGrowl {
-    font-family: "Noto Sans"
-}
-
 .jGrowl#jGrowl {
+    position: fixed;
     top: 50%;
     left: 50%;
     right: auto;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -ms-transform: translateX(-50%) translateY(-50%);
+
+    font-family: $font-family-heading;
+
     transform: translateX(-50%) translateY(-50%);
     z-index: 99;
 
     .jGrowl-notification {
+        opacity: 1;
         width: 320px;
-        padding: 40px 20px;
-        border: 1px solid $light-grey;
+        padding: map-get($map: $spacers, $key: 3) map-get($map: $spacers, $key: 2);
+        margin: 0;
+
+        border: 4px solid $border-color;
         border-radius: 0;
 
-        font-size: 14px;
-        color: $dark-grey;
+        font-size: map-get($map: $font-size, $key: sm);
+        color: $white;
 
         .jGrowl-close {
             position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 21px;
+            top: 0px;
+            right: 0px;
+
+            font-size: 20px;
             line-height: 30px;
             width: 34px;
+
             text-align: center;
+            color: $white;
+
+            border: none;
             border-radius: 0;
-            color: #fff;
             outline: 0
         }
 
         &.af-message-success {
-            background-color: #fff!important;
+            background-color: $body-bg!important;
+            border-color: $green;
+            color: $green;
+
             .jGrowl-close {
                 background: $green;
+                color: $black;
             }
         }
 
         &.af-message-error {
-            background-color: #fff!important;
+            background-color: $body-bg!important;
+            border-color: $red;
+            color: lighten($color: $red, $amount: 12);
+
             .jGrowl-close {
                 background: $red;
             }
