--- a/src/items/item/_item.scss
+++ b/src/items/item/_item.scss
@@ -66,10 +66,29 @@
     }
 }
 
+// 768px
 @media all and (max-width: map-get($grid-breakpoints, 'sm')){
     .item{
         &__title{
             font-size: 1rem;
+        }
+    }
+}
+// 576x
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .item{
+        &__title{
+            &_has-icon{
+                grid-template-columns: 34px 1fr;
+            }
+        }
+        &__icon{
+            &_inside-title{
+                width: 34px;
+            }
+        }
+        &__intro{
+            font-size: map-get($map: $font-size, $key: xs);
         }
     }
 }
