--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -125,3 +125,8 @@ block content
                             p.content-main__list создавать лого, которые нравятся
         //- Contact Form
         include ../blocks/content/content-form.pug
+        .modal.modal_cookies.modal_cookies--show#cookies
+            p.modal_cookies__content Мы используем файлы cookie. 
+                a.modal_cookies__link(href="[[++policy]]" target="_blank" title="Политика обработки персональных данных") Политика обработки персональных данных
+            a.modal_cookies__btn#cookiesagree(href="#") Принять
+        //- <div id="jGrowl" class="top-right jGrowl"><div class="jGrowl-notification alert ui-state-highlight ui-corner-all af-message-success" style="display: block;"><button class="jGrowl-close">×</button><div class="jGrowl-header"></div><div class="jGrowl-message">Упс! В форме содержатся ошибки</div></div></div>
